@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-10-01T00:58:13Z",
+  "timestamp" : "2025-10-02T00:50:46Z",
   "count_outdated" : 1038,
   "uniques_outdated" : 644,
-  "count" : 1054,
-  "uniques" : 660,
+  "count" : 1055,
+  "uniques" : 661,
   "clones" : [
     {
       "timestamp": "2025-09-18T00:00:00Z",
@@ -106,6 +106,15 @@
     },
     {
       "timestamp": "2025-09-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
