@@ -1,5 +1,5 @@
 {
-  "count": 16,
+  "count": 17,
   "uniques": 6,
   "clones": [
     {
@@ -59,6 +59,11 @@
     },
     {
       "timestamp": "2025-09-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-01T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
