@@ -1,3 +1,12 @@
+2025-10-02T00:50:46Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18179935746 # 784
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-02
+* notice: last 14d: unq all: 6 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 644 1038 / 660 1054
+* notice: next accum: outdated-unq outdated-all / unq all: 644 1038 / 661 1055
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-10-01]
+
 2025-10-01T00:58:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18147769515 # 783
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-01
